# detect_jailbreak

./: README.md  app_inference_spec.py  benchmarks.json  pyproject.toml
.github/workflows/: publish_pypi.yml
model/: train.py
tests/: test_validator.py
validator/: main.py  models.py  post-install.py  resources.py
